[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
actix-cors = "0.6.4"
tokio = { version = "1.24.2", features = ["rt", "macros"] }
futures = "0.3.25"
once_cell = "1.17.0"
dotenv = { version ="0.15.0" }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
text_io = "0.1.12"
thiserror = "1.0.40"
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.5.4"
chrono = "0.4"
